<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartClick</string>
    <string name="take_screenshot">Take A Screenshot</string>
    <string name="stop_mirror">Stop Mirror</string>
    <string name="start_mirror">Start Mirror</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="start_floating_widget">Start Floating Widget</string>
    <string name="analyse">Analyse</string>
    <string name="kill">Kill Widget</string>
    <string name="bouncing_ball">Bouncing Ball</string>
    <string name="finish">Finish</string>
    <string name="clear">Erase Video Buffer</string>
    <string name="process">Process Selected Image</string>
</resources>
